<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Focal</string>
    <string name="launch_app">Launch Focal</string>
    <string name="shutter_button">Shutter button</string>
    <string name="cannot_connect_hal">Unable to connect to camera</string>
    <string name="recording">Recording</string>
    <string name="double_tap_to_snapshot">Double-tap to take a picture</string>
    <string name="video_res_1080p">Full HD (1080p)</string>
    <string name="video_res_720p">HD (720p)</string>
    <string name="video_res_480p">SD (480p)</string>
    <string name="video_res_mms">MMS (288p)</string>
    <string name="ok">OK</string>
    <string name="no_gles20_support">Your device doesn\'t support GLES2</string>
    <string name="no_gyroscope">Your device doesn\'t have a gyroscope</string>
    <string name="ps_long_press_to_stop">Long-press the shutter button to\nfinish your sphere.</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="no_video_player">Couldn\'t play the video, no player found</string>
    <string name="fullscreen_shutter_info">Tap anywhere to shoot</string>
    <string name="please_wait">Please wait\u2026</string>
    <string name="retouch">RETOUCH</string>
    <string name="open_in_gallery">GALLERY</string>
    <string name="mode_photo">Photo</string>
    <string name="mode_video">Video</string>
    <string name="mode_picsphere">PicSphere</string>
    <string name="mode_panorama">Panorama</string>
    <string name="mode_switchcam">Facing</string>
    <string name="widget_burstmode_count_shots">Burst %d shots</string>
    <string name="widget_burstmode_off">Disable burst mode</string>
    <string name="widget_burstmode_infinite">Infinite burst</string>
    <string name="widget_hdr_aebracket">Auto bracketing</string>
    <string name="widget_settings_choose_widgets">Choose widgets in the sidebar</string>
    <string name="widget_settings_choose_widgets_button">Choose widgets</string>
    <string name="widget_settings_picture_size">Image size</string>
    <string name="widget_settings_exposure_ring">Show exposure ring</string>
    <string name="widget_settings_autoenhance">Auto-enhancement</string>
    <string name="widget_settings_ruleofthirds">Rule of Thirds</string>
    <string name="widget_autoexposure">Light measure</string>
    <string name="widget_burstmode">Burst mode</string>
    <string name="widget_effect">Effects</string>
    <string name="widget_enhancements">Color adjust.</string>
    <string name="widget_exposure_compensation">Exposure comp.</string>
    <string name="widget_flash">Flash</string>
    <string name="widget_hdr">High Dynamic Range</string>
    <string name="widget_iso">ISO</string>
    <string name="widget_scenemode">Scene mode</string>
    <string name="widget_settings">Settings</string>
    <string name="widget_shutter_speed">Shutter speed</string>
    <string name="widget_skintone">Skin Tone Enhancement</string>
    <string name="widget_softwarehdr">High Dynamic Range</string>
    <string name="widget_timermode">Timer mode</string>
    <string name="widget_videofr">Video framerate</string>
    <string name="widget_videohdr">Video High Dynamic Range</string>
    <string name="widget_whitebalance">White balance</string>
    <string name="pano_file_name_format" translatable="false">"'PANO'_yyyyMMdd_HHmmss"</string>
    <string name="pano_panorama_rendering_failed">Failed to render panorama.\nTry to take a shorter one.</string>
    <string name="pano_panorama_rendering">Panorama is rendering</string>
    <string name="picsphere_undo_button">UNDO</string>
    <string name="picsphere_start_hint">Take a picture to start a sphere</string>
    <string name="picsphere_already_rendering">Please wait for the current PicSphere to render</string>
    <string name="picsphere_rendering_progress">Rendering\u2026 (%d %%)</string>
    <string name="picsphere_toast_background_render">Rendering started\u2026</string>
    <string name="picsphere_notif_title">Rendering PicSphere\u2026</string>
    <string name="picsphere_failed">PicSphere rendering failed</string>
    <string name="picsphere_failed_details">Make sure pictures only overlap on their edges.</string>
    <string name="picsphere_need_two_pics">You need at least two pictures.</string>
    <string name="picsphere_step_preparing">Preparing\u2026</string>
    <string name="picsphere_step_ptogen">Generating metadata\u2026</string>
    <string name="picsphere_step_ptovar">Writing camera orientation\u2026</string>
    <string name="picsphere_step_cpfind">Finding control points\u2026</string>
    <string name="picsphere_step_autooptimiser">Aligning images\u2026</string>
    <string name="picsphere_step_ptclean">Cleaning points\u2026</string>
    <string name="picsphere_step_panomodify">Cropping empty areas\u2026</string>
    <string name="picsphere_step_nona">Stitching pictures\u2026</string>
    <string name="picsphere_step_enblend">Blending pictures\u2026</string>
    <string name="software_hdr_notif_title">Computing HDR picture\u2026</string>
    <string name="software_hdr_failed">HDR rendering failed</string>
    <string name="software_hdr_failed_details">The source pictures have been kept.</string>
    <string name="showcase_welcome_1_title">Welcome!</string>
    <string name="showcase_welcome_1_body">The options are in the sidebar,\njust slide it.</string>
    <string name="showcase_welcome_2_title">Shutter button</string>
    <string name="showcase_welcome_2_body">Tap the shutter button to take a picture.\nSlide it to access other capture modes.</string>
    <string name="showcase_panorama_title">Panorama mode</string>
    <string name="showcase_panorama_body">Tap the shutter to start your panorama,\nthen pan what you want to capture.\nOnce done, tap the shutter button again.</string>
    <string name="showcase_picsphere_title">PicSphere mode</string>
    <string name="showcase_picsphere_body">Align your first picture where you like,\nthen tap the shutter to take each picture\nof the sphere. The blue dots are points\nof reference you can follow.\nLong-press the shutter once you\'re done.</string>
    <string name="iso_hint_auto">Automatic ISO</string>
    <string name="iso_hint_hjr">Hands-Jitter Reduction ISO</string>
    <string name="iso_hint_100">100 ISO</string>
    <string name="iso_hint_200">200 ISO</string>
    <string name="iso_hint_400">400 ISO</string>
    <string name="iso_hint_800">800 ISO</string>
    <string name="iso_hint_1600">1600 ISO</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="advanced_options">ADVANCED</string>
    <string name="anti_aliasing">Anti-aliasing</string>
    <string name="anti_aliasing_summary">Beautify panoramas by removing aliasing artifacts</string>
    <string name="auto_delete_settings">Auto-delete photos</string>
    <string name="auto_delete_summary">Applies only to newly captured photos after stitching.</string>
    <string name="auto_exposure_settings">Auto-exposure balancing</string>
    <string name="auto_exposure_summary">Balance out the exposure differences</string>
    <string name="autostraighten_summary">Make panoramas straight</string>
    <string name="blending_settings">Blending</string>
    <string name="cropping_settings">Auto-crop</string>
    <string name="cropping_summary">Remove wavy panorama boundaries</string>
    <string name="default_directory">Panorama</string>
    <string name="linear_blending_summary">Standard</string>
    <string name="notification_options">NOTIFICATIONS</string>
    <string name="notification_settings">Get notifications</string>
    <string name="notification_summary">When stitching is complete (Only when device screen is off)</string>
    <string name="orientation_settings">Auto-straighten</string>
    <string name="output_album">Album</string>
    <string name="output_options">OUTPUT</string>
    <string name="output_settings">Maximum size</string>
    <string name="prefs_summ_output_size">1.00 MP</string>
    <string name="preview_options">PREVIEW</string>
    <string name="preview_settings">Show preview</string>
    <string name="preview_summary">A quick way to preview your panos before final rendering.</string>
    <string name="projection_settings">Projection</string>
    <string name="rendering_options">RENDERING</string>
    <string name="settings">Settings</string>
    <string name="spherical_proj_summary">Spherical</string>
</resources>